--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "grunt-mocha-test": "^0.13.2",
     "grunt-spawn": "^1.1.74",
     "grunt-tslint": "5.0.1",
+    "http-proxy": "^1.17.0",
     "load-grunt-tasks": "^3.5.2",
     "mocha": "^3.1.2",
     "time-grunt": "^1.4.0",
