--- a/spa/package.json
+++ b/spa/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -v --proxy-config proxy.conf.json",
+    "start": "node ../proxy.js &  ng serve -v --proxy-config proxy.conf.json",
     "build": "ng build --prod -aot false -op ../dist",
     "test": "ng test",
     "lint": "ng lint",
