--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ addons:
     - npm
 before_install:
 - pip install awscli --upgrade
-- npm install gatsby-cli@1.1.51 --global
-install: npm install
+install: cd spa; npm install
 script: make build
 deploy:
 - provider: script
